--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "starter-pack",
+	"name": "me",
 	"version": "0.1.0",
 	"private": true,
 	"homepage": "https://AwesomeLittle76.github.io/me",
@@ -13,15 +13,12 @@
 		"@types/jest": "^26.0.24",
 		"@types/react": "^17.0.27",
 		"@types/react-dom": "^17.0.9",
-		"@types/react-router-config": "^5.0.3",
 		"@types/react-router-dom": "^5.3.1",
-		"@types/styled-components": "^5.1.15",
 		"@types/testing-library__jest-dom": "^5.14.1",
 		"html-webpack-plugin": "^5.3.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hot-loader": "^4.13.0",
-		"react-route-config": "^2.0.1",
 		"react-router": "^5.2.1",
 		"react-router-dom": "^5.3.0",
 		"typescript": "^4.4.3",
